[package]
name = "markdown-to-cucumber"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Write Markdown docs with embedded Cucumber scenarios and execute them as tests — plus a generic step library for testing CLI tools"

[lib]
name = "markdown_to_cucumber"
path = "src/lib.rs"

[dependencies]
csv = "1"
cucumber = "0.23"
futures = "0.3"
regex = "1"
tokio = { version = "1", features = ["process"] }

[dev-dependencies]
tempfile = "3"
